<!-- res/layout/activity_how_to_play.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".HowToPlayActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_title"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <!-- Bagian 1: Tujuan Permainan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_1_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_1_desc"
            android:layout_marginBottom="15dp"/>

        <!-- Bagian 2: Koneksi Jaringan (P2P) -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_desc_1"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_host_title"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_host_desc"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_client_title"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_2_client_desc"
            android:layout_marginBottom="15dp"/>

        <!-- Bagian 3: Aturan Main -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_3_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_3_desc"
            android:layout_marginBottom="15dp"/>

        <!-- Bagian 4: Fitur Tambahan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_4_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_4_desc"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>
</ScrollView>
